index.html - creation of link to prata.html under recipes dir
creation of prata.html in new dir recipes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 <body>
   <p>Nothing to see here...</p>
   <!-- Project -->
+  <<h1>
+    Odin Recipes
+  </h1>>
+ <a href="recipes/prata.html">  
+     Prata link
+ </a>
+
+  
+    
   <script src="main.js"></script>
 </body>
 </html>
